--- a/client/src/components/NavHeader/NavHeader.module.scss
+++ b/client/src/components/NavHeader/NavHeader.module.scss
@@ -12,12 +12,27 @@
     a {
       padding: 5px 12px;
     }
+    @media screen and (max-width: 500px) {
+      display: none;
+    }
   }
   .right_links {
     display: flex;
     align-items: center;
     a {
       padding: 5px 12px;
+    }
+    @media screen and (max-width: 500px) {
+      display: none;
+    }
+  }
+  .mobile_nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @media screen and (min-width: 501px) {
+      display: none;
     }
   }
 }
