--- a/client/src/components/NavHeader/NavHeader.module.css
+++ b/client/src/components/NavHeader/NavHeader.module.css
@@ -68,3 +68,60 @@
     display: none;
   }
 }
+
+.header .mobile_nav .mobile_nav_menu {
+  position: absolute;
+  width: 100%;
+  top: 70px;
+  left: 0px;
+  background-color: var(--dark);
+  list-style: none;
+  z-index: 100;
+  opacity: 0;
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  -webkit-transition: all 0.45s ease-in-out;
+  transition: all 0.45s ease-in-out;
+}
+
+.header .mobile_nav .mobile_nav_menu a,
+.header .mobile_nav .mobile_nav_menu p {
+  display: block;
+  color: var(--white);
+  margin: 25px 0px;
+  font-size: 1.5rem;
+  text-decoration: none;
+  text-align: center;
+}
+
+.header .mobile_nav .mobile_nav_menu_open {
+  position: absolute;
+  width: 100%;
+  top: 70px;
+  left: 0px;
+  background-color: var(--dark);
+  list-style: none;
+  z-index: 100;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  opacity: 1;
+  -webkit-transition: all 0.45s ease-in-out;
+  transition: all 0.45s ease-in-out;
+}
+
+.header .mobile_nav .mobile_nav_menu_open a,
+.header .mobile_nav .mobile_nav_menu_open p {
+  display: block;
+  color: var(--white);
+  margin: 25px 0px;
+  font-size: 1.5rem;
+  text-decoration: none;
+  text-align: center;
+  -webkit-transition: all 0.45s ease-in-out;
+  transition: all 0.45s ease-in-out;
+}
+
+.header .mobile_nav .mobile_nav_menu_open a:hover,
+.header .mobile_nav .mobile_nav_menu_open p:hover {
+  text-decoration: underline;
+}
