--- a/client/src/pages/SignUp/SignUp.module.scss
+++ b/client/src/pages/SignUp/SignUp.module.scss
@@ -1,8 +1,9 @@
 .signup_section {
+  position: relative;
+  height: 85vh;
   h1,
   h2 {
     text-align: center;
     color: var(--dark);
   }
-
 }
