--- a/client/src/components/NavHeader/NavHeader.module.scss
+++ b/client/src/components/NavHeader/NavHeader.module.scss
@@ -1,41 +1,40 @@
 .header {
   width: 100%;
   padding: 0px 24px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  .left_links {
+  height: 70px;
+  border-bottom: 1px solid var(--dark);
+  font-weight: bold;
+  .desktop_nav {
     display: flex;
+    justify-content: space-between;
     align-items: center;
 
-    a {
-      padding: 5px 12px;
-      margin-left: 20px;
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
+    .logo {
+      margin-right: 20px;
     }
-    @media screen and (max-width: 500px) {
-      display: none;
-    }
-  }
-  .right_links {
-    display: flex;
-    align-items: center;
+
     a,
     p {
       padding: 5px 12px;
       text-decoration: none;
+      color: var(--dark);
+      transition: all 0.45s ease-in-out;
       &:hover {
         text-decoration: underline;
       }
     }
+
     @media screen and (max-width: 500px) {
       display: none;
     }
+
+    .left_links,
+    .right_links {
+      display: flex;
+      align-items: center;
+    }
   }
+
   .mobile_nav {
     width: 100%;
     display: flex;
@@ -85,10 +84,6 @@
         font-size: 1.5rem;
         text-decoration: none;
         text-align: center;
-        transition: all 0.45s ease-in-out;
-        &:hover {
-          text-decoration: underline;
-        }
       }
     }
   }
