--- a/client/src/components/Forms/LogInForm/LogInForm.module.scss
+++ b/client/src/components/Forms/LogInForm/LogInForm.module.scss
@@ -12,6 +12,11 @@
     border: none;
   }
 
+  .error_msg {
+    color: var(--red);
+    text-align: center;
+  }
+
   button {
     width: 100%;
     padding: 0.525rem 0.65rem;
