--- a/client/src/components/Forms/TaskForm/TaskForm.module.css
+++ b/client/src/components/Forms/TaskForm/TaskForm.module.css
@@ -15,6 +15,7 @@
   background-color: var(--dark);
   -webkit-box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
   -webkit-transition: all 0.45s ease-in-out;
   transition: all 0.45s ease-in-out;
 }
