--- a/client/src/components/Forms/TaskForm/TaskForm.module.scss
+++ b/client/src/components/Forms/TaskForm/TaskForm.module.scss
@@ -13,6 +13,7 @@
     color: var(--white);
     background-color: var(--dark);
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
     transition: all 0.45s ease-in-out;
     &:hover {
       background-color: var(--green);
