--- a/client/src/pages/Dashboard/Dashboard.module.css
+++ b/client/src/pages/Dashboard/Dashboard.module.css
@@ -2,3 +2,17 @@
 .dashboard h4 {
   text-align: center;
 }
+
+.dashboard .button_container {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.dashboard .button_container button {
+  margin: 10px;
+}
