--- a/client/src/components/Task/Task.module.css
+++ b/client/src/components/Task/Task.module.css
@@ -17,7 +17,7 @@
   border-radius: 5px;
 }
 
-.task_container button {
+.task_container .delete_button {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -27,4 +27,10 @@
   padding: 6px 8px;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.task_container .edit_button {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
 }
