--- a/client/src/components/Task/Task.module.scss
+++ b/client/src/components/Task/Task.module.scss
@@ -10,7 +10,7 @@
   border: 1px solid var(--dark);
   border-radius: 5px;
 
-  button {
+  .delete_button {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -20,5 +20,12 @@
     padding: 6px 8px;
     border-radius: 5px;
     cursor: pointer;
+  }
+
+  .edit_button {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    
   }
 }
