--- a/client/src/components/LabelInput/LabelInput.module.scss
+++ b/client/src/components/LabelInput/LabelInput.module.scss
@@ -13,3 +13,22 @@
     padding: 0.5rem 0.75rem;
   }
 }
+
+.form_group_date {
+  padding: 0.5rem 0;
+  width: 50%;
+  @media screen and (max-width: 400px) {
+    width: 100%;
+  }
+  label {
+    display: block;
+    padding-bottom: 0.125rem;
+    font-size: 1rem;
+  }
+  input {
+    display: block;
+    width: 100%;
+    font-size: 1rem;
+    padding: 0.5rem 0.75rem;
+  }
+}
