--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-button.primary {
+button.primary,
+.swal2-styled,
+.swal2-confirm {
   padding: 8px 12px;
   border: none;
   border-radius: 5px;
@@ -32,9 +34,31 @@ button.primary {
   transition: all 0.45s ease-in-out;
 }
 
-button.primary:hover {
+button.primary:hover,
+.swal2-styled:hover,
+.swal2-confirm:hover {
   background-color: var(--green);
-  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: var(--white);
+}
+
+button.secondary {
+  padding: 8px 12px;
+  border: 1px solid var(--dark);
+  border-radius: 5px;
+  color: var(--dark);
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: all 0.45s ease-in-out;
+}
+
+button.secondary:hover {
+  background-color: grey;
+  box-shadow: 0px 10px 20px rgba(128, 128, 128, 0.8);
+  border: none;
   color: var(--white);
   transform: translateY(-3px);
+}
+
+.swal2-popup {
+  width: 40em;
 }
