--- a/client/src/components/Modal/EditTaskModal/EditTaskModal.module.css
+++ b/client/src/components/Modal/EditTaskModal/EditTaskModal.module.css
@@ -1,9 +1,9 @@
 .modal_overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100vh;
+  right: 0;
+  bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
