--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,9 +21,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-button.primary,
-.swal2-styled,
-.swal2-confirm {
+button.primary {
   padding: 8px 12px;
   border: none;
   border-radius: 5px;
@@ -34,11 +32,11 @@ button.primary,
   transition: all 0.45s ease-in-out;
 }
 
-button.primary:hover,
-.swal2-styled:hover,
-.swal2-confirm:hover {
+button.primary:hover {
   background-color: var(--green);
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: var(--white);
+  transform: translateY(-3px);
 }
 
 button.secondary {
@@ -57,8 +55,4 @@ button.secondary:hover {
   border: none;
   color: var(--white);
   transform: translateY(-3px);
-}
-
-.swal2-popup {
-  width: 40em;
 }
