--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -1,3 +1,22 @@
 .home_page {
   text-align: center;
 }
+
+.home_page div {
+  width: 90%;
+  max-width: 600px;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: left;
+  margin: 0 auto;
+  border: 2px solid var(--dark);
+}
+
+.home_page .instruction_div {
+  margin: 20px auto;
+}
+
+strong {
+  display: block;
+  padding-right: 10px;
+}
