--- a/client/src/components/Task/Task.module.css
+++ b/client/src/components/Task/Task.module.css
@@ -21,6 +21,10 @@
           align-items: center;
 }
 
+.task_container .task_header strong {
+  display: inline;
+}
+
 .task_container .task_header h3 {
   max-width: 70%;
 }
