--- a/client/src/components/Task/Task.module.scss
+++ b/client/src/components/Task/Task.module.scss
@@ -12,6 +12,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    strong {
+      display: inline;
+    }
     h3 {
       max-width: 70%;
     }
